--- a/cotizador_acerta/templates/administrador/list_antiguedad.html
+++ b/cotizador_acerta/templates/administrador/list_antiguedad.html
@@ -2,7 +2,7 @@
 
 {% block titulo %}
     <h1>
-        Editar Factor: <strong>Sexo</strong>
+        Editar Factor: <strong>Antigüedad</strong>
     </h1>
 {% endblock titulo %}
 
@@ -16,22 +16,25 @@
               <table id="example2" class="table table-bordered table-hover">
                 <thead>
                   <tr>
-                    <th>Sexo</th>
-                    <th>Factor</th>
+                    <th>Límite</th>
+                    <th>Factor Inferior</th>
+                    <th>Factor Superior</th>
                   </tr>
                 </thead>
                 <tbody>
-                    {% for sexo in sexos %}
+                    {% for antiguedad in antiguedades %}
                         <tr>
-                            <td><a href="{% url 'admin_sexo' sexo.pk %}">{{ sexo.sexo }}</a></td>
-                            <td>{{ sexo.factor|floatformat:2 }}</td>
+                            <td><a href="{% url 'admin_antiguedad' antiguedad.pk %}">{{ antiguedad.limite }}</a></td>
+                            <td>{{ antiguedad.factor_menor|floatformat:2 }}</td>
+                            <td>{{ antiguedad.factor_mayor|floatformat:2 }}</td>
                         </tr>
                     {% endfor %}
                 </tbody>
                 <tfoot>
                   <tr>
-                    <th>Sexo</th>
-                    <th>Factor</th>
+                    <th>Límite</th>
+                    <th>Factor Inferior</th>
+                    <th>Factor Superior</th>
                   </tr>
                 </tfoot>
               </table>
