--- a/cotizador_acerta/templates/footer.html
+++ b/cotizador_acerta/templates/footer.html
@@ -3,7 +3,7 @@
 <section id="footer">
 	<img src="{% static 'img/AcertaSeguros.png'%}" class="hidden-md hidden-lg" style="max-width:60px; float: right;">
     <div class="container hidden-xs">
-        <div class="col-lg-12 text-center">
+        <div class="col-lg-12 col-xs-12 col-sm-12 col-md-12 text-center">
             <a id="link-footer" href="#">Términos y condiciones</a> - Acerta Seguros - Panamá - Todos los derechos reservados
         </div>
     </div>
