--- a/cotizador_acerta/templates/administrador/colision_form.html
+++ b/cotizador_acerta/templates/administrador/colision_form.html
@@ -27,7 +27,11 @@
         <!-- general form elements -->
           <div class="box box-primary">
             <div class="box-header with-border">
-              <h3 class="box-title">Factor Historial de Tránsito: Entre <strong>{{ historial.inferior }}</strong> y <strong>{{ historial.superior }}</strong></h3>
+              {% if colision.tiempo == 9 %}
+                <h3 class="box-title">Factor Colisión y Vuelco: Mayor o igual a <strong>{{ colision.tiempo }}</strong> años</h3>
+              {% else %}
+                <h3 class="box-title">Factor Colisión y Vuelco: <strong>{{ colision.tiempo }}</strong> año(s)</h3>
+              {% endif %}
             </div><!-- /.box-header -->
             {% bootstrap_form_errors form %}
             <!-- form start -->
