--- a/cotizador_acerta/templates/administrador/endoso_form.html
+++ b/cotizador_acerta/templates/administrador/endoso_form.html
@@ -27,7 +27,7 @@
         <!-- general form elements -->
           <div class="box box-primary">
             <div class="box-header with-border">
-              <h3 class="box-title">Factor Historial de Tránsito: Entre <strong>{{ historial.inferior }}</strong> y <strong>{{ historial.superior }}</strong></h3>
+              <h3 class="box-title">Factor Endoso: <strong>{{ endoso.endoso }}</strong></h3>
             </div><!-- /.box-header -->
             {% bootstrap_form_errors form %}
             <!-- form start -->
