--- a/cotizador_acerta/templates/administrador/list_endoso.html
+++ b/cotizador_acerta/templates/administrador/list_endoso.html
@@ -2,7 +2,7 @@
 
 {% block titulo %}
     <h1>
-        Editar Factor: <strong>Sexo</strong>
+        Editar Factor: <strong>Estado Civil</strong>
     </h1>
 {% endblock titulo %}
 
@@ -16,21 +16,21 @@
               <table id="example2" class="table table-bordered table-hover">
                 <thead>
                   <tr>
-                    <th>Sexo</th>
+                    <th>Endoso</th>
                     <th>Factor</th>
                   </tr>
                 </thead>
                 <tbody>
-                    {% for sexo in sexos %}
+                    {% for endoso in endosos %}
                         <tr>
-                            <td><a href="{% url 'admin_sexo' sexo.pk %}">{{ sexo.sexo }}</a></td>
-                            <td>{{ sexo.factor|floatformat:2 }}</td>
+                            <td><a href="{% url 'admin_endoso' endoso.pk %}">{{ endoso.endoso }}</a></td>
+                            <td>{{ endoso.factor|floatformat:2 }}</td>
                         </tr>
                     {% endfor %}
                 </tbody>
                 <tfoot>
                   <tr>
-                    <th>Sexo</th>
+                    <th>Endoso</th>
                     <th>Factor</th>
                   </tr>
                 </tfoot>
