--- a/cotizador_acerta/templates/administrador/list_historial_transito.html
+++ b/cotizador_acerta/templates/administrador/list_historial_transito.html
@@ -9,8 +9,8 @@
 {% block content %}
 
     <div class="row">
-        <div class="col-xs-3"></div>
-        <div class="col-xs-6">
+        <div class="col-md-3 col-sm-hidden col-xs-hidden"></div>
+        <div class="col-md-6 col-sm-12 col-xs-12">
           <div class="box">
             <div class="box-body">
               <table id="example2" class="table table-bordered table-hover">
@@ -41,7 +41,7 @@
             </div><!-- /.box-body -->
           </div><!-- /.box -->
         </div>
-        <div class="col-xs-3"></div>
+        <div class="col-md-3 col-sm-hidden col-xs-hidden"></div>
     </div>
 
 {% endblock content %}
