--- a/cotizador_acerta/templates/administrador/sexo_form.html
+++ b/cotizador_acerta/templates/administrador/sexo_form.html
@@ -22,8 +22,8 @@
 
 {% block content %}
 <div class="row">
-    <div class="col-md-3"></div>
-    <div class="col-md-6">
+    <div class="col-md-3 col-sm-hidden col-xs-hidden"></div>
+    <div class="col-md-6 col-xs-12 col-sm-12">
         <!-- general form elements -->
           <div class="box box-primary">
             <div class="box-header with-border">
@@ -44,7 +44,7 @@
             </form>
           </div><!-- /.box -->
     </div>
-    <div class="col-md-3"></div>
+    <div class="col-md-3 col-sm-hidden col-xs-hidden"></div>
 </div>
 
 {% endblock content %}
