--- a/cotizador_acerta/templates/administrador/valor_form.html
+++ b/cotizador_acerta/templates/administrador/valor_form.html
@@ -23,11 +23,11 @@
 {% block content %}
 <div class="row">
     <div class="col-md-3 col-sm-hidden col-xs-hidden"></div>
-    <div class="col-md-6 col-xs-12 col-sm-12">
+    <div class="col-md-6 col-sm-12 col-xs-12">
         <!-- general form elements -->
           <div class="box box-primary">
             <div class="box-header with-border">
-              <h3 class="box-title">Factor Historial de Tránsito: Entre <strong>{{ historial.inferior }}</strong> y <strong>{{ historial.superior }}</strong></h3>
+              <h3 class="box-title">Factor Valor de Vehículo: Entre <strong>{{ valor.inferior }}</strong> y <strong>{{ valor.superior }}</strong></h3>
             </div><!-- /.box-header -->
             {% bootstrap_form_errors form %}
             <!-- form start -->
