--- a/cotizador_acerta/templates/cotizar/detalle_cotizacion.html
+++ b/cotizador_acerta/templates/cotizar/detalle_cotizacion.html
@@ -70,7 +70,7 @@
         line-height: 30px;
     }
     .back {
-        color: #FFFFFF; 
+        color: #FFFFFF;
         background-color: #E76C42;
         text-align: center;
         float: left;
@@ -267,6 +267,7 @@
                       <h5><strong>Prima Mensual:</strong></h5>
                       <h5><strong>Prima Pago de Contado:</strong></h5>
                       <h5>Prima Pago ACH/Visa:</h5>
+                      <h5>Descuento</h5>
                     </div>
                     <div class="col-md-2 col-xs-4 text-right" style="text:align:left;">
                       <h5><strong>{{ cotizacion.endoso }}</strong></h5>
@@ -276,6 +277,7 @@
                       <h5 id="prima-mensual" data-total="{{ cotizacion.total|floatformat:2 }}"><strong>B/. {{ cotizacion.prima_mensual|floatformat:2 }}</strong></h5>
                       <h5><strong>B/.{{ cotizacion.prima_pagoContado|floatformat:2|intcomma }}</strong></h5>
                       <h5>B/.{{ cotizacion.prima_pagoVisa|floatformat:2|intcomma }}</h5>
+                      <h5>{{ cotizacion.descuento|floatformat:2|intcomma }}</h5>
                     </div>
                     <br>
                     </div><!-- /.box-body -->
