--- a/cotizador_acerta/templates/cotizar/email.html
+++ b/cotizador_acerta/templates/cotizar/email.html
@@ -428,6 +428,7 @@
 					                              </tr>
 					                            </table>
 					                            <div class="text-right">
+					                              <h5>A pagar en {{ cotizacion.cuota }} Cuota(s)</h5>
 					                              <h5>Subtotal: B/. {{ cotizacion.subtotal|floatformat:2 }}</h5>
 					                              <h5>Impuestos: B/. {{ cotizacion.impuestos|floatformat:2 }}</h5>
 					                              <h5>Total a Pagar: B/. {{ cotizacion.total|floatformat:2 }}</h5>
