--- a/cotizador_acerta/templates/base.html
+++ b/cotizador_acerta/templates/base.html
@@ -70,6 +70,8 @@
 
     <!-- ChartJs -->
     <script src="{% static 'js/plugins/chartjs/Chart.min.js' %}"></script>
+
+    <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/2.0.0/jquery.validate.min.js"></script>
 {% endblock script %}
 {% block custom_script %}{% endblock custom_script %}
 </div>
