--- a/cotizador_acerta/templates/administrador/danios_form.html
+++ b/cotizador_acerta/templates/administrador/danios_form.html
@@ -39,7 +39,10 @@
               </div><!-- /.box-body -->
 
               <div class="box-footer text-center">
-                {% buttons submit='Actualizar' %}{% endbuttons %}
+                <div class="form-group">
+                  <a href="{% url 'list_danios' %}" class="btn btn-danger" type="reset">Cancelar</a>
+                  <button class="btn btn-primary" type="submit">Actualizar</button>
+                </div>
               </div>
             </form>
           </div><!-- /.box -->
