--- a/cotizador_acerta/templates/administrador/importacion_form.html
+++ b/cotizador_acerta/templates/administrador/importacion_form.html
@@ -39,6 +39,7 @@
               </div><!-- /.box-body -->
 
               <div class="box-footer text-center">
+                <a href="{% url 'list_importacion' %}" class="btn btn-danger">Cancelar</a>
                 {% buttons submit='Actualizar' %}{% endbuttons %}
               </div>
             </form>
