--- a/cotizador_acerta/templates/administrador/tiempo_uso_form.html
+++ b/cotizador_acerta/templates/administrador/tiempo_uso_form.html
@@ -43,7 +43,10 @@
               </div><!-- /.box-body -->
 
               <div class="box-footer text-center">
-                {% buttons submit='Actualizar' %}{% endbuttons %}
+                <div class="form-group">
+                  <a href="{% url 'list_tiempo_uso' %}" class="btn btn-danger" type="reset">Cancelar</a>
+                  <button class="btn btn-primary" type="submit">Actualizar</button>
+                </div>
               </div>
             </form>
           </div><!-- /.box -->
