--- a/cotizador_acerta/templates/cotizar/vehiculo.html
+++ b/cotizador_acerta/templates/cotizar/vehiculo.html
@@ -211,6 +211,7 @@
 <script type="text/javascript">
 
     $(document).ready(function(){
+
         $('.endoso').prop("disabled",true);
         $('input').iCheck({
             checkboxClass: 'icheckbox_square-grey',
@@ -226,6 +227,16 @@
         $( '#id_muerte_accidental' ).prepend('<option class="placeholder" value="" selected=selected disabled>Muerte Accidental</option>');
         $( '#id_modelo' ).empty();
         $( '#id_modelo' ).append('<option class="placeholder" value="" selected=selected disabled>Modelo</option>');
+    });
+
+    $(document).on("change", "#id_identificacion", function(e){
+        e.preventDefault();
+        console.log("entrando");
+       if( $("#id_tipo_id_0").is(':checked') ){
+            $("#id_identificacion").rules("add", { regex: "(\d{1,2}\-\d{2,4}\-\d{4})$" })
+       } else {
+            $("#id_identificacion").rules("remove", { regex: "(\d{1,2}\-\d{2,4}\-\d{4})$" })
+       }
     });
 
     $( document ).on('change', '#id_lesiones_corporales', function(e) {
@@ -406,6 +417,10 @@
             $('#id_cero_km').prop('checked', false);
         }
     });
+
+
+
+
 
 </script>
 
