--- a/cotizador_acerta/templates/cotizar/opciones_cotizaciones.html
+++ b/cotizador_acerta/templates/cotizar/opciones_cotizaciones.html
@@ -235,7 +235,7 @@
 </div><br>
 <div class="col-md-4"></div>
 <div class="col-md-4 text-center">
-    <a class="btn btn-lg calculate" href="{% url 'vehiculo' %}"><span class="glyphicon glyphicon-chevron-left"></span>Volver</a>
+    <a class="btn btn-lg calculate" href="{% url 'volver-vehiculo' cotizaciones.0.conductor.pk %}"><span class="glyphicon glyphicon-chevron-left"></span>{{cotizaciones.0.conductor.pk}} Volver</a>
 </div>
 <div class="col-md-4"></div>
 <br>
