--- a/cotizador_acerta/templates/footer.html
+++ b/cotizador_acerta/templates/footer.html
@@ -4,7 +4,8 @@
 	<img src="{% static 'img/AcertaSeguros.png'%}" class="hidden-md hidden-lg" style="max-width:60px; float: right;">
     <div class="container hidden-xs">
         <div class="col-lg-12 col-xs-12 col-sm-12 col-md-12 text-center">
-            <a id="link-footer" href="#">Términos y condiciones</a> - Acerta Seguros - Panamá - Todos los derechos reservados
+            <a id="link-footer" href="#">Términos y condiciones</a> - Acerta Seguros - Panamá - Todos los derechos reservados <br>
+            Powered By <a id="link-footer2" href="http://darientechnology.com"><i>Darien Technology, S.A</i></a>  
         </div>
     </div>
 </section>
