--- a/cotizador_acerta/templates/footer.html
+++ b/cotizador_acerta/templates/footer.html
@@ -3,9 +3,12 @@
 <section id="footer">
 	<img src="{% static 'img/AcertaSeguros.png'%}" class="hidden-md hidden-lg" style="max-width:60px; float: right;">
     <div class="container hidden-xs">
-        <div class="col-lg-12 col-xs-12 col-sm-12 col-md-12 text-center">
-            <a id="link-footer" href="#">Términos y condiciones</a> - Acerta Seguros - Panamá - Todos los derechos reservados <br>
-            Powered By <a id="link-footer2" href="http://darientechnology.com"><i>Darien Technology, S.A</i></a>  
+        <div class="col-lg-3 col-sm-3 col-md-3"></div>
+        <div class="col-lg-6 col-sm-6 col-md-6 text-center">
+            <a id="link-footer" href="#">Términos y condiciones</a> - Acerta Seguros - Panamá - Todos los derechos reservados
+        </div>
+        <div class="col-lg-3 col-xs-3 col-sm-3 col-md-3 text-right">
+            Powered By <a id="link-footer2" href="http://darientechnology.com"><strong><i style="color: #E76C42;">Darien Technology, S.A</i></strong></a>
         </div>
     </div>
 </section>
