ultimo detalle validcion de cedula

--- a/cotizador_acerta/templates/cotizar/vehiculo.html
+++ b/cotizador_acerta/templates/cotizar/vehiculo.html
@@ -259,6 +259,7 @@
             }
        } else {
             $(".cedula-validacion").remove();
+            $('#id_submit').prop('disabled', false);
        }
     });
 
