--- a/cotizador_acerta/templates/cotizar/vehiculo.html
+++ b/cotizador_acerta/templates/cotizar/vehiculo.html
@@ -286,11 +286,6 @@
             $( '#id_modelo' ).empty();
             $( '#id_modelo' ).append('<option class="placeholder" value="" selected=selected disabled>Modelo</option>');
         {% else %}
-            {% if vehiculo %}
-                console.log({{vehiculo.endoso}});
-            {% else %}
-                console.log({{form.endoso}});
-            {% endif %}
             $( '#id_marca' ).prepend('<option class="placeholder" value="" disabled>Marca</option>');
             $( '#id_estado_civil' ).prepend('<option class="placeholder" value="" disabled>Estado Civil</option>');
             $( '#id_sexo' ).prepend('<option class="placeholder" value="" disabled>Sexo</option>');
@@ -977,7 +972,7 @@
     });
 
     $(document).ready(function(){
-        $('#id_valor_text').mask("000,000,000.00" , {reverse: true});
+        $('#id_valor_text').maskMoney();
     });
 
 </script>
