--- a/cotizador_acerta/templates/reportes/corredor_list.html
+++ b/cotizador_acerta/templates/reportes/corredor_list.html
@@ -1,5 +1,16 @@
-{% extend "base.html" %}
+{% extends "base.html" %}
 {% load static %}
+
+{% block extracss %}
+<link href="{% static 'plugins/datatables/jquery.dataTables.css' %}" rel="stylesheet">
+<link href="{% static 'plugins/datatables/dataTables.bootstrap.css' %}" rel="stylesheet">
+<style type="text/css">
+	.box {
+		padding-top: 20%;
+		width: 75%;
+	}
+</style>
+{% endblock extracss %}
 
 {% block content %}
 <div class="box">
@@ -8,7 +19,7 @@
 	</div>
 	<div class="box-body">
 	  <div id="example1_wrapper" class="dataTables_wrapper form-inline dt-bootstrap"><div class="row"><div class="col-sm-6"><div class="dataTables_length" id="example1_length"><label>Mostrar <select name="example1_length" aria-controls="example1" class="form-control input-sm"><option value="10">10</option><option value="25">25</option><option value="50">50</option><option value="100">100</option></select> entradas</label></div></div><div class="col-sm-6"><div id="example1_filter" class="dataTables_filter"><label>Search:<input type="search" class="form-control input-sm" placeholder="" aria-controls="example1"></label></div></div></div><div class="row"><div class="col-sm-12"><table id="example1" class="table table-bordered table-striped dataTable" role="grid" aria-describedby="example1_info">
-	  <div id="example1_wrapper" class="dataTables_wrapper form-inline dt-bootstrap"><div class="row"><div class="col-sm-6"><div class="dataTables_length" id="example1_length"><label>Mostrar <select name="example1_length" aria-controls="example1" class="form-control input-sm"><option value="10">10</option><option value="25">25</option><option value="50">50</option><option value="100">100</option></select> entradas</label></div></div><div class="col-sm-6"><div id="example1_filter" class="dataTables_filter"><label>Search:<input type="search" class="form-control input-sm" placeholder="" aria-controls="example1"></label></div></div></div><div class="row"><div class="col-sm-12"><table id="example1" class="table table-bordered table-striped dataTable" role="grid" aria-describedby="example1_info">
+	  <div id="example1_wrapper" class="dataTables_wrapper form-inline dt-bootstrap"><div class="row"><div class="col-sm-6"><div class="dataTables_length" id="example1_length"><label>Mostrar <select name="example1_length" aria-controls="example1" class="form-control input-sm"><option value="10">10</option><option value="25">25</option><option value="50">50</option><option value="100">100</option></select> entradas</label></div></div><div class="col-sm-6"><div id="example1_filter" class="dataTables_filter"><label>Buscar:<input type="search" class="form-control input-sm" placeholder="" aria-controls="example1"></label></div></div></div><div class="row"><div class="col-sm-12"><table id="example1" class="table table-bordered table-striped dataTable" role="grid" aria-describedby="example1_info">
 	    <thead>
 	    <tr role="row">
 		    <th class="sorting_asc" tabindex="0" aria-controls="example1" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Nombre: activate to sort column descending" style="width: 181px;">Nombre</th>
@@ -21,12 +32,13 @@
 	    </thead>
 	    <tbody>
 	    {% for user in object_list %}
-	    	<tr role="row" class="odd">
-		      <td class="sorting_1">Gecko</td>
-		      <td>Firefox 1.0</td>
-		      <td>Win 98+ / OSX.2+</td>
-		      <td>1.7</td>
-		      <td>A</td>
+	    	<tr role="row">
+		      <td class="sorting_1"> {{ user.user.first_name }}</td>
+		      <td>{{ user.user.last_name }}</td>
+		      <td>{{ user.user.email }}</td>
+		      <td>{{ user.licencia }}</td>
+		      <td><a href="#">View</a></td>
+		      <td><a href="#">View</a></td>
 		    </tr>
 	    {% endfor %}</tbody>
 	    <tfoot>
@@ -36,4 +48,7 @@
 	</div>
 </div>
 {% endblock content %}
+
+{% block custom_script %}
+{% endblock custom_script %}
 
