--- a/cotizador_acerta/templates/reportes/corredor_vendedor_list.html
+++ b/cotizador_acerta/templates/reportes/corredor_vendedor_list.html
@@ -92,7 +92,8 @@
 {% block custom_script %}
 <script type="text/javascript">
 	$(function () {
-		$("#example1","#example2").DataTable();
+		$("#example1").DataTable();
+		$("#example2").DataTable();
 	});
 </script>
 {% endblock custom_script %}
